test/Tests/VertexInput/InvalidDoubleComponent.golden

test\Tests\VertexInput\InvalidDoubleComponent.hs:37:10: error:
    * Cannot position scalar of type Double
       at Location 1, Component 1.
    * In the expression: shader do put @"out" =<< get @"in"
      In an equation for `vertex':
          vertex = shader do put @"out" =<< get @"in"
   |
37 | vertex = shader do
   |          ^^^^^^^^^^...
